# minuteman

./: .gitignore  README.md  pyproject.toml  requirements.txt  zensical.toml
.github/workflows/: CI.yml  ci.yml  docs.yml  python-package.yml
docs/: index.md
docs/cpg/: cone_flow.md  fanno.md  index.md  isentropic_flow.md  normal_shock.md  oblique_shock.md  rayleigh.md  shock_tube.md  thermo.md
docs/utils/: types.md
fluids/compressible/inviscid/: base_relations.py  flow_1d.py  isentropic.py  normal_shock.py  rayleigh.py  shock_relations.py
minuteman/compressible/: cone_flow.py  fanno.py  isentropic.py  normal_shock.py  oblique_shock.py  rayleigh.py  sod.py
minuteman/mymath/: mymath.py
minuteman/thermodynamics/: caloric_perfect.py  real_gas.py  thermal_perfect.py
minuteman/utils/: types.py
mymath/: mymath.py
phypy/compressible/: fanno.py  isentropic.py  normal_shock.py  rayleigh.py  sod.py
phypy/mymath/: mymath.py
phypy/thermodynamics/: caloric_perfect.py
phypy/utils/: arg_checks.py
src/minuteman/: __init__.py
src/minuteman/compressible/: normal_shock.py  oblique_shock.py
src/minuteman/cpg/: __init__.py  base.py  cone_flow.py  fanno.py  isentropic_flow.py  normal_shock.py  oblique_shock.py  rayleigh.py  shock_tube.py  sod.py  thermo.py
src/minuteman/thermodynamics/: reacting.py  thermal_perfect.py
src/minuteman/utils/: arg_checks.py  types.py
test/fluids/: test_base_relations.py  test_flow_1d.py  test_isentropic.py  test_normal_shock.py  test_rayleigh.py
test/thermodynamics/: test_caloric_perfect.py
tests/: conftest.py
tests/minuteman/compressible/: test_cone_flow.py  test_fanno.py  test_isentropic.py  test_normal_shock.py  test_oblique_shock.py  test_rayleigh.py  test_sod.py
tests/minuteman/cpg/: test_base.py  test_cone_flow.py  test_fanno.py  test_isentropic.py  test_isentropic_flow.py  test_normal_shock.py  test_oblique_shock.py  test_rayleigh.py  test_shock_tube.py  test_sod.py  test_thermo.py
tests/minuteman/thermodynamics/: test_caloric_perfect.py
tests/phypy/compressible/: test_fanno.py  test_isentropic.py  test_normal_shock.py  test_rayleigh.py  test_sod.py
tests/phypy/thermodynamics/: test_caloric_perfect.py
thermodynamics/: caloric_perfect.py  reacting.py  real_gas.py  thermal_perfect.py
