[project]
name = "minuteman"
version = "0.0.1"
authors = [
  {name = "Jared Magnusson", email = "jmag722@gmail.com"},
]
description = "Python library for solving engineering problems."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = [
  "aerospace",
  "engineering",
  "minuteman",
  "physics",
  "science",
  "toolkit"
]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy >= 2",
  "scipy",
]

[project.optional-dependencies]
dev = [
  "flake8", # TODO: remove once refactor complete
  "pyrefly",
  "pytest",
  "pytest-cov",
  "ruff",
]

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = [
  "src"
]

[tool.ruff]
line-length = 79
indent-width = 4
lint.fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 79

[project.urls]
"Homepage" = "https://github.com/jmag722/minuteman"
"Bug Reports" = "https://github.com/jmag722/minuteman/issues"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/minuteman"]
