[project]
name = "minuteman"
version = "0.0.1"
authors = [
  {name = "Jared Magnusson", email = "jmag722@gmail.com"},
]
description = "Python library for solving engineering problems."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = [
  "aerospace",
  "engineering",
  "minuteman",
  "physics",
  "science",
  "toolkit"
]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy >= 2",
  "scipy",
]

[dependency-groups]
dev = [
  "mkdocstrings",
  "mkdocstrings-python",
  "pyrefly",
  "pytest",
  "pytest-cov",
  "ruff",
  "zensical",
]

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = [
  "src"
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 79

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "E",
    "W",
    "F",
]
extend-select = [
    "I",
]

[project.urls]
"Homepage" = "https://github.com/jmag722/minuteman"
"Bug Reports" = "https://github.com/jmag722/minuteman/issues"

[tool.pyrefly]
project-includes = [
    "src",
    "tests",
]
search_path = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/minuteman"]
